<resources>
    <string name="app_name">Collie</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="collie_device_admin_description">Ative para poder ter controle do bloqueio dos
        apps</string>
    <string name="collie_device_admin_label">Collie</string>
    <string name="add_admin_extra_app_text">Ative para utilizar todos os recursos</string>
    <string name="register_header">Realize o seu cadastro</string>
    <string name="register_name_father">Nome do responsável</string>
    <string name="register_email_father">Email do responsável</string>
    <string name="register_name_child">Nome do(a) dependente</string>
    <string name="register_age_child">Idade do(a) dependente</string>
    <string name="register_password_father">Senha</string>
    <string name="register_confirm_password_father">Confirmação de senha</string>
    <string name="register_button_send">Finalizar Cadastro</string>
    <string name="sign_up_user">Criando o usuário, por favor aguarde…</string>
    <string name="successfully_registered">Usuário criado com sucesso.</string>
    <string name="edit_user">Editando o usuário, por favor aguarde...</string>
    <string name="error_required_field">Campo obrigatório</string>
    <string name="error_passwords_not_match">Senhas não conferem</string>
    <string name="error_password_too_small">Sua senha precisa ter pelo menos 6 caracteres, digite
        novamente.</string>
    <string name="error_invalid_email">Email inválido, digite novamente.</string>
    <string name="error_failed_signin_email_exists">Falha ao entrar\n\nEsse e-mail já está sendo
        usado em nosso sistema.\nTente novamente com outro email.</string>
    <string name="error_unknown_error">Erro desconhecido, tente novamente.</string>
    <string name="error_user_password_incorrect">Usuário e/ou senha incorreto(s).</string>
    <string name="category_register_title">Selecione a categoria correspondente ao aparelho</string>
    <string name="category_register_btn_config">Configurar Aparelho</string>
    <string name="category_register_btn_responsible">Aparelho do Responsável</string>
    <string name="category_register_btn_dependent">Aparelho do Dependente</string>
    <string name="category_register_btn_register">Realizar Cadastro</string>
    <string name="sign_with_email">Email</string>
    <string name="sign_with_passord">Senha</string>
    <string name="sign_with_btn_send">Entrar</string>
    <string name="sign_with_btn_title">Realize abaixo o seu login</string>
    <string name="sign_with_btn_forgat">Esqueci minha senha</string>
    <string name="processing_login">Processando login, por favor aguarde…</string>
    <string name="son_sign_with_phone">Telefone do dependente</string>
    <string name="son_sign_with_btn_send">Entrar</string>
    <string name="son_sign_with_btn_title">Realize abaixo o seu login</string>
    <string name="forgot_password_title">Esqueceu a sua senha?</string>
    <string name="forgot_password_subtitle">Insira abaixo o seu email para recuperá-la.</string>
    <string name="forgot_password_email">Email</string>
    <string name="forgot_password_confirm">Confirmar</string>
    <string name="forgot_password_cancel">Cancelar</string>
    <string name="setup_screen_title">Defina o tipo de bloqueio.</string>
    <string name="setup_screen_block">Bloqueio</string>
    <string name="setup_screen_simple">Simples</string>
    <string name="setup_screen_time">Por tempo</string>
    <string name="setup_screen_points">Por pontos</string>
    <string name="setup_screen_dialog_yes">Sim</string>
    <string name="setup_screen_dialog_cancel">Cancelar</string>
    <string name="category_block_simple_title">Bloqueio simples</string>
    <string name="category_block_simple_description1">Nessa categoria de bloqueio, o responsável
        determina quais os períodos do dia que o dependente poderá utilizar o celular,
        por exemplo: \n\n

        Se  o responsável deseja que o bloqueio seja noturno, neste caso o celular ficará bloqueado
        das 22 horas as 09 horas(período este que será escolhido pelo responsável).\n\n

        Do mesmo modo o responsável poderá fazer um bloqueio durante o período de aula do
        dependente, período de tempo esse, que também será determinado pelo responsável.\n\n

        As funções: Alarme, Calculadora e ligação não serão bloqueadas e o dependente poderá
        utilizar normalmente.
    </string>
    <string name="category_block_simple_button_return">Voltar</string>
    <string name="category_block_time_title">Bloqueio por tempo limite</string>
    <string name="category_block_time_description1">Nessa categoria de bloqueio, o responsável
        determina quanto tempo o dependente irá usar o celular até que seja bloqueado,
        por exemplo:\n\n

        O responsável definiu que o dependente poderá usar o celular por um tempo determinado,
        após esse tempo acabar o celular será bloqueado e aparecerá uma questão de múltipla escolha
        na tela com 20 segundos para ser respondida, se a resposta estiver correta, o celular
        desbloqueia e começa a contagem novamente para bloquear, se o dependente não acertar,
        outra pergunta irá aparecer e isso se repetirá por 5 vezes até que ele acerte, caso ele
        não acerte nenhuma das 5 perguntas, o aparelho ficará bloqueado por um período de tempo
        determinado pelo responsável, após esse período o celular será liberado e todo o ciclo
        irá se repetir.\n\n

        As funções: Alarme, Calculadora e ligação não serão bloqueadas e o dependente poderá
        utilizar normalmente.\n\n

        Bloqueio noturno, bloqueio escolar e bônus por tarefas estão disponíveis também nesta
        categoria.\n\n

        O responsável receberá ao final de cada dia um relatório de desempenho do dependente.
    </string>
    <string name="category_block_time_button_return">Voltar</string>
    <string name="category_block_points_title">Bloqueio por pontos</string>
    <string name="category_block_points_description1">Nesta categoria de bloqueio o responsável
        determina com quanto tempo de uso o dependente inicia o dia, por exemplo:\n\n

        O dependente inicia o dia com 1 hora de uso liberado, após esgotar esse tempo ele terá
        que responder corretamente questões de multiplas escolhas para ganhar pontos, cada ponto
        equivale a um minuto de uso.\n\n

        Perguntas respondidas corretamente = +5 pontos\n\n

        Pergunta que pular = -1 ponto\n\n

        Pergunta que errar = -2 pontos\n\n

        Cada pergunta tera 20 segundos para ser respondida.\n\n

        Os pontos são acumulativos.\n\n

        O responsavel podera limitar o número de perguntas por dia.\n\n

        As funções: Alarme, Calculadora e ligação não serão bloqueadas e o dependente poderá
        utilizar normalmente.\n\n

        Bloqueio noturno, bloqueio escolar e bônus por tarefas estão disponiveis também nesta
        categoria.\n\n

        O responsável receberá ao final de cada dia um relatório de desempenho do dependente.</string>
    <string name="category_block_points_button_return">Voltar</string>
    <string name="splash_good_morning">Bom dia, seja bem vindo!</string>
    <string name="splash_good_afternoon">Boa tarde, seja bem vindo!</string>
    <string name="splash_good_evening">Boa noite, seja bem vindo!</string>
    <string name="question_button_confirm">Confirmar</string>
    <string name="question_button_jump">Pular</string>
    <string name="lateral_menu_main_screen">Tela Principal</string>
    <string name="lateral_menu_edit_profile">Editar Meu Perfil</string>
    <string name="lateral_menu_register_son">Cadastrar Filho</string>
    <string name="lateral_menu_edit_config">Configuração de Bloqueio</string>
    <string name="lateral_menu_change_block">Alterar Bloqueio</string>
    <string name="lateral_menu_list_reports">Relatórios</string>
    <string name="lateral_menu_list_task">Tarefas</string>
    <string name="lateral_menu_access_for_life">Assine Agora</string>
    <string name="lateral_menu_exit">Sair</string>
    <string name="lateral_menu_who_are_you">Quem Somos</string>
    <string name="lateral_menu_list_contact_us">Fale Conosco</string>
    <string name="contact_us_title">Fale Conosco</string>
    <string name="contact_us_name">Nome</string>
    <string name="contact_us_phone">Telefone</string>
    <string name="contact_us_city">Cidade</string>
    <string name="contact_us_message">Menssagem</string>
    <string name="contact_us_send">Enviar</string>
    <string name="contact_us_cancel">Cancelar</string>
    <string name="main_title_alert">Bloqueio não configurado!</string>
    <string name="main_subtitle_alert">Acesse o menu lateral para configurar</string>
    <string name="main_dialog_yes">Sim</string>
    <string name="main_dialog_cancel">Cancelar</string>
    <string name="main_reports">Relatórios</string>
    <string name="main_schedule">Agenda</string>
    <string name="main_tasks">Tarefas</string>
    <string name="main_localization">Localização</string>
    <string name="config_block_simple_title">Bloqueio Simples</string>
    <string name="config_block_simple_subtitle">Período de bloqueio</string>
    <string name="config_block_simple_subtitle_optional">Período de bloqueio(Opcional)</string>
    <string name="config_block_simple_title1">Período de aula</string>
    <string name="config_block_simple_title2">Período de tarefas</string>
    <string name="config_block_simple_title3">Periodo noturno</string>
    <string name="config_block_simple_time_initial">Tempo inicial</string>
    <string name="config_block_simple_time_final">Tempo Final</string>
    <string name="config_block_simple_subtitle2">Descreva a tarefa 1(Opcional)</string>
    <string name="config_block_simple_subtitle3">Descreva a tarefa 2(Opcional)</string>
    <string name="config_block_simple_time_name_task">Nome da tarefa</string>
    <string name="config_block_simple_time_bonus_task">Tempo de bônus</string>
    <string name="config_block_time_title">Bloqueio Por Tempo</string>
    <string name="config_block_time_subtitle">Tempo limite antes do bloqueio</string>
    <string name="config_block_time_hint">Tempo limite antes do bloqueio</string>
    <string name="config_block_time_subtitle1">Tempo de bloqueio em caso de erro</string>
    <string name="config_block_time_hint1">Tempo de bloqueio, se errar</string>
    <string name="config_block_point_title">Bloqueio Por Pontos</string>
    <string name="config_block_point_subtitle1">Tempo inicial</string>
    <string name="config_block_point_hint1">Com quanto tempo iniciará o dia</string>
    <string name="add_schedule_title">Agenda</string>
    <string name="add_schedule_subtitle">Adicione uma nova atividade</string>
    <string name="add_schedule_date">Data</string>
    <string name="add_schedule_time">Hora</string>
    <string name="add_schedule_name">Nome da atividade</string>
    <string name="add_schedule_description">Descrição de até 100 caracteres</string>
    <string name="add_schedule_add">Adicionar</string>
    <string name="add_schedule_cancel">Cancelar</string>
    <string name="instruction_slide_two_title">Selecionando um Bloqueio</string>
    <string name="instruction_slide_two_subtitle">Observe as três opções de bloqueios disponíveis,
        se haver alguma dúvida sobre um determinado bloqueio, clique na interrogação, se quiser
        selecionar clique na setinha</string>
    <string name="instruction_slide_two_button_previous">Anterior</string>
    <string name="instruction_slide_two_button_next">Próximo</string>
    <string name="tasks_list_make">Fazer</string>
    <string name="tasks_list_done">Feito</string>
    <string name="tasks_list_not_done">Não Feito</string>
</resources>