<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_screem_main"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/lateral_menu_main_screen" />
        <item
            android:id="@+id/nav_edit_profile"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/lateral_menu_edit_profile" />
        <item
            android:id="@+id/nav_edit_config"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/lateral_menu_edit_config" />
        <item
            android:id="@+id/nav_change_block"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/lateral_menu_change_block" />
        <item
            android:id="@+id/nav_list_reports"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/lateral_menu_list_reports" />

        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/lateral_menu_exit" />
    </group>

    <item android:title="Aplicativo">
        <menu>
            <item
                android:id="@+id/nav_who_are_you"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/lateral_menu_who_are_you" />
            <item
                android:id="@+id/nav_contact_us"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/lateral_menu_list_contact_us" />
        </menu>
    </item>

</menu>
