<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".view.ConfigBlockSimpleActivity"
    android:padding="10dp">
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context="comcesar1287.github.www.collie.view.ConfigBlockSimpleActivity">

        <TextView
           android:id="@+id/add_schedule_title"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/add_schedule_title"
           android:textColor="@color/colorPrimary"
           android:textSize="20sp"
           android:textStyle="bold"/>

        <TextView
            android:id="@+id/add_schedule_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/add_schedule_title"
            android:text="@string/add_schedule_subtitle"
            android:textColor="@color/black_grey"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/add_schedule_button_date"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_below="@id/add_schedule_subtitle"
            android:text="@string/add_schedule_date"
            android:gravity="center"
            android:textAllCaps="true"
            android:textColor="@color/black_grey"
            android:background="@null" />

        <TextView
            android:id="@+id/add_schedule_button_time"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_below="@id/add_schedule_subtitle"
            android:layout_toRightOf="@id/add_schedule_button_date"
            android:layout_toEndOf="@id/add_schedule_button_date"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/add_schedule_time"
            android:textColor="@color/black_grey"
            android:gravity="center"
            android:textAllCaps="true"
            android:background="@null" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/add_schedule_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_schedule_button_time"
            android:layout_marginTop="10dp"
            android:theme="@style/TextLabelForWhite">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_schedule_name"
                android:textSize="14sp"
                android:inputType="textEmailAddress">
            </EditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/add_schedule_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_schedule_name"
            android:layout_marginTop="15dp"
            android:theme="@style/TextLabelForWhite">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_schedule_description"
                android:maxLength="100"
                android:textSize="14sp"
                android:inputType="textEmailAddress">
            </EditText>
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_schedule_description"
            android:layout_marginTop="29dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <Button
                android:id="@+id/button_schedule_add"
                android:layout_width="135dp"
                android:layout_height="35dp"
                android:layout_marginRight="5dp"
                android:text="@string/add_schedule_add"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/button_schedule_cancel"
                android:layout_width="135dp"
                android:layout_height="35dp"
                android:text="@string/add_schedule_cancel"
                android:background="@color/asbestos"
                android:layout_alignParentRight="true"
                android:textColor="@color/white"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

    </RelativeLayout>
</FrameLayout>