<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".view.ForgotPasswordActivity"
    android:padding="15dp">

    <RelativeLayout
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="15dp">

        <TextView
            android:id="@+id/forgot_password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_title"
            android:textColor="@color/colorPrimary"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/forgot_password_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/forgot_password_title"
            android:text="@string/forgot_password_subtitle"
            android:textSize="13sp"
            android:textColor="@color/black_grey"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/forgot_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/forgot_password_subtitle"
            android:layout_marginTop="35dp"
            android:theme="@style/TextLabelForWhite">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/forgot_password_email"
                android:textSize="17sp"
                android:inputType="textEmailAddress">
            </EditText>
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/forgot_email"
            android:layout_marginTop="29dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <Button
                android:id="@+id/forgot_password_button_send"
                android:layout_width="135dp"
                android:layout_height="35dp"
                android:layout_marginRight="5dp"
                android:text="@string/forgot_password_confirm"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/forgot_password_button_cancel"
                android:layout_width="135dp"
                android:layout_height="35dp"
                android:text="@string/forgot_password_cancel"
                android:background="@color/asbestos"
                android:layout_alignParentRight="true"
                android:textColor="@color/white"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

    </RelativeLayout>

</FrameLayout>