<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="comcesar1287.github.www.collie.view.ScheduleActivity">

    <TextView
        android:id="@+id/instrution_slide_two_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/instruction_slide_two_title"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/black_grey"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/instrution_slide_two_subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/instrution_slide_two_title"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/instruction_slide_two_subtitle"
        android:textSize="17sp"
        android:textColor="@color/black_grey"
        android:gravity="center"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:id="@+id/instrution_slide_three_logo"
        android:layout_width="170dp"
        android:layout_height="220dp"
        android:layout_marginBottom="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/collie_image_instruction_select"/>

    <RelativeLayout
        android:id="@+id/instrution_slide_two_buttons"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/instrution_slide_two_button_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instruction_slide_two_button_previous"
            android:textSize="15sp"
            android:background="@null"/>
        <Button
            android:id="@+id/instrution_slide_two_button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/instruction_slide_two_button_next"
            android:textSize="15sp"
            android:background="@null" />
    </RelativeLayout>

</RelativeLayout>