<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="comcesar1287.github.www.collie.view.CategoryRegisterActivity"
    android:background="@color/colorPrimary"
    android:padding="20dp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:src="@drawable/collie_image_logo"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/category_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginTop="35dp"
        android:text="@string/category_register_title"
        android:textSize="27sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btn_responsible"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_below="@id/category_text"
        android:layout_marginTop="35dp"
        android:text="@string/category_register_btn_responsible"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/square"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"/>

    <Button
        android:id="@+id/btn_dependent"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_below="@id/btn_responsible"
        android:layout_marginTop="15dp"
        android:text="@string/category_register_btn_dependent"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:background="@drawable/square"
        android:textSize="15sp"/>

</RelativeLayout>
